# libparenth

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  testmain
build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-debug/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: libparenth.hpp
test/: CMakeLists.txt  matrixchain.cpp  testmain.cpp
